--- a/webMetics/Views/Participante/EditarParticipante.cshtml
+++ b/webMetics/Views/Participante/EditarParticipante.cshtml
@@ -1,7 +1,7 @@
 ﻿@model webMetics.Models.ParticipanteModel
 @using webMetics.Controllers
 @{
-    ViewBag.Title = "Editar información personal";
+    ViewBag.Title = "Información Personal";
 
     var urlReferrer = Context.Request.Headers["Referer"].FirstOrDefault();
 }
