--- a/webMetics/Views/Shared/_Modal.cshtml
+++ b/webMetics/Views/Shared/_Modal.cshtml
@@ -21,7 +21,7 @@
     <br />
 
     <div class="modal-footer">
-        @Html.ActionLink("Aceptar", "EliminarParticipante", "Participante", new { idParticipante = ViewBag.IdParticipante }, new { @class = "btn btn-primary" })
+        @Html.ActionLink("Aceptar", "EliminarParticipante", "Participante", new { idParticipante = ViewBag.IdParticipante }, new { @class = "btn btn-danger" })
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
     </div>
 </div>
