--- a/webMetics/Views/Tema/CrearTema.cshtml
+++ b/webMetics/Views/Tema/CrearTema.cshtml
@@ -1,7 +1,7 @@
 ﻿@model webMetics.Models.TemaModel
 @using webMetics.Controllers
 @{
-    ViewBag.Title = "Agregar tema";
+    ViewBag.Title = "Crear Tema";
 }
 <!DOCTYPE html>
 
