--- a/webMetics/Views/TipoActividad/CrearTipoActividad.cshtml
+++ b/webMetics/Views/TipoActividad/CrearTipoActividad.cshtml
@@ -1,7 +1,7 @@
 ﻿@model webMetics.Models.TipoActividadModel
 @using webMetics.Controllers
 @{
-    ViewBag.Title = "Agregar tipo de actividad";
+    ViewBag.Title = "Crear Actividad";
 }
 <!DOCTYPE html>
 
