--- a/webMetics/Views/TipoActividad/EditarTipoActividad.cshtml
+++ b/webMetics/Views/TipoActividad/EditarTipoActividad.cshtml
@@ -1,6 +1,6 @@
 ﻿@model webMetics.Models.TipoActividadModel
 @{
-    ViewBag.Title = "Editar tipo de actividad";
+    ViewBag.Title = "Editar Actividad";
 }
 <!DOCTYPE html>
 
