--- a/webMetics/Views/Usuario/CambiarContrasena.cshtml
+++ b/webMetics/Views/Usuario/CambiarContrasena.cshtml
@@ -1,7 +1,7 @@
 ﻿@model webMetics.Models.NewLoginModel
 @using webMetics.Controllers
 @{
-    ViewBag.Title = "Cambiar contraseña";
+    ViewBag.Title = "Contraseña";
 
     var urlReferrer = Context.Request.Headers["Referer"].FirstOrDefault();
 }
