--- a/webMetics/Views/Usuario/IniciarSesion.cshtml
+++ b/webMetics/Views/Usuario/IniciarSesion.cshtml
@@ -1,6 +1,6 @@
 ﻿@model webMetics.Models.LoginModel
 @{
-    ViewBag.Title = "Iniciar sesión";
+    ViewBag.Title = "Iniciar Sesión";
 }
 
 <body style="background-image: url('/images/fondo_login.jpg')">
