--- a/webMetics/Views/Asesor/CrearAsesor.cshtml
+++ b/webMetics/Views/Asesor/CrearAsesor.cshtml
@@ -6,7 +6,7 @@
 -->
 
 @{
-    ViewBag.Title = "Agregar asesor";
+    ViewBag.Title = "Agregar Asesor";
 
     var urlReferrer = Context.Request.Headers["Referer"].FirstOrDefault();
 }
@@ -65,61 +65,70 @@
             <div class="row mb-1">
                 <div class="col">
                     <div class="container">
-                        <div class="form-group mt-1">
-                            @Html.LabelFor(asesorModel => asesorModel.nombre, new { Style = "font-size:22px" })  <a style="color:red;font-size:22px">*</a>
+                        <div class="form-group">
+                            @Html.LabelFor(asesorModel => asesorModel.nombre, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
                             @Html.TextBoxFor(asesorModel => asesorModel.nombre, new { @class = "form-control", @maxlength = "64", @autocomplete = "off" })
                             @Html.ValidationMessageFor(asesorModel => asesorModel.nombre, "", new { @class = "text-danger" })
                         </div>
-
-                        <div class="form-group mt-1">
-                            @Html.LabelFor(asesorModel => asesorModel.primerApellido, new { Style = "font-size:22px" })  <a style="color:red;font-size:22px">*</a>
-                            @Html.TextBoxFor(asesorModel => asesorModel.primerApellido, new { @class = "form-control", @maxlength = "64", @autocomplete = "off" })
-                            @Html.ValidationMessageFor(asesorModel => asesorModel.primerApellido, "", new { @class = "text-danger" })
+                        <div class="row mt-1">
+                            <div class="col">
+                                @Html.LabelFor(asesorModel => asesorModel.primerApellido, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
+                                @Html.TextBoxFor(asesorModel => asesorModel.primerApellido, new { @class = "form-control", @maxlength = "64", @autocomplete = "off" })
+                                @Html.ValidationMessageFor(asesorModel => asesorModel.primerApellido, "", new { @class = "text-danger" })
+                            </div>
+                            <div class="col">
+                                @Html.LabelFor(asesorModel => asesorModel.segundoApellido, new { Style = "font-size:22px" })
+                                @Html.TextBoxFor(asesorModel => asesorModel.segundoApellido, new { @class = "form-control", @maxlength = "64", @autocomplete = "off" })
+                                @Html.ValidationMessageFor(asesorModel => asesorModel.segundoApellido, "", new { @class = "text-danger" })
+                            </div>
                         </div>
-
-                        <div class="form-group mt-1">
-                            @Html.LabelFor(asesorModel => asesorModel.segundoApellido, new { Style = "font-size:22px" })
-                            @Html.TextBoxFor(asesorModel => asesorModel.segundoApellido, new { @class = "form-control", @maxlength = "64", @autocomplete = "off" })
-                            @Html.ValidationMessageFor(asesorModel => asesorModel.segundoApellido, "", new { @class = "text-danger", @maxlength = "64" })
-                        </div>
-
-                        <div class="form-group mt-1">
-                            @Html.LabelFor(asesorModel => asesorModel.correo, new { Style = "font-size:22px" })  <a style="color:red;font-size:22px">*</a>
+                        <div class="form-group">
+                            @Html.LabelFor(asesorModel => asesorModel.correo, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
                             @Html.TextBoxFor(asesorModel => asesorModel.correo, new { @class = "form-control", @maxlength = "64", @autocomplete = "off" })
                             @Html.ValidationMessageFor(asesorModel => asesorModel.correo, "", new { @class = "text-danger" })
                         </div>
-
+                        <div class="row mt-1">
+                            <div class="col">
+                                @Html.LabelFor(asesorModel => asesorModel.tipoIdentificacion, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
+                                @Html.DropDownListFor(asesorModel => asesorModel.tipoIdentificacion, new SelectList(Enum.GetValues(typeof(webMetics.Models.TipoIdentificacion))), "Seleccione su tipo de identificación...", new { @class = "form-control" })
+                                @Html.ValidationMessageFor(asesorModel => asesorModel.tipoIdentificacion, "", new { @class = "text-danger" })
+                            </div>
+                            <div class="col">
+                                @Html.LabelFor(usuarioModel => usuarioModel.numeroIdentificacion, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
+                                @Html.TextBoxFor(usuarioModel => usuarioModel.numeroIdentificacion, new { @class = "form-control", @maxlength = "64", @autocomplete = "off" })
+                                @Html.ValidationMessageFor(usuarioModel => usuarioModel.numeroIdentificacion, "", new { @class = "text-danger" })
+                                <small class="form-text text-muted">
+                                    Formato de cédula: 1-1100-1100 (con guiones)
+                                </small>
+                            </div>
+                        </div>
+                        <div class="form-group mt-1">
+                            @Html.LabelFor(asesorModel => asesorModel.descripcion, new { Style = "font-size:22px" })
+                            @Html.TextAreaFor(asesorModel => asesorModel.descripcion, new { @class = "form-control", @maxlength = "256", @autocomplete = "off" })
+                            @Html.ValidationMessageFor(asesorModel => asesorModel.descripcion, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group mt-1">
+                            @Html.LabelFor(asesorModel => asesorModel.telefono, new { Style = "font-size:22px" })
+                            @Html.TextBoxFor(asesorModel => asesorModel.telefono, new { @class = "form-control", @maxlength = "64", @autocomplete = "off" })
+                            @Html.ValidationMessageFor(asesorModel => asesorModel.telefono, "", new { @class = "text-danger" })
+                        </div>
                         <div class="form-group mt-1">
                             @Html.LabelFor(asesorModel => asesorModel.temaAsociado, new { Style = "font-size:22px" })  <a style="color:red;font-size:22px">*</a>
                             @Html.DropDownList("temaAsociado", ViewData["Temas"] as List<SelectListItem>, "Seleccione un tema asociado...", new { @class = "form-select", @autocomplete = "off" })
                             @Html.ValidationMessageFor(asesorModel => asesorModel.temaAsociado, "", new { @class = "text-danger" })
                         </div>
-
                         <div class="form-group mt-1">
-                            @Html.LabelFor(asesorModel => asesorModel.asistentesAsociados, new { Style = "font-size:22px" })  <a style="color:red;font-size:22px">*</a>
+                            @Html.LabelFor(asesorModel => asesorModel.asistentesAsociados, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
                             @Html.TextBoxFor(asesorModel => asesorModel.asistentesAsociados, new { @class = "form-control", @autocomplete = "off" })
                             @Html.ValidationMessageFor(asesorModel => asesorModel.asistentesAsociados, "", new { @class = "text-danger" })
                         </div>
-
-                        <div class="form-group mt-1">
-                            @Html.LabelFor(asesorModel => asesorModel.telefono, new { Style = "font-size:22px" })  <a style="color:red;font-size:22px">*</a>
-                            @Html.TextBoxFor(asesorModel => asesorModel.telefono, new { @class = "form-control", @maxlength = "12", @minlength = "7", @autocomplete = "off" })
-                            @Html.ValidationMessageFor(asesorModel => asesorModel.telefono, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="row justify-content-center m-4">
+                        <div class="col-auto">
+                            <a href="#" class="btn btn-secondary btn-block" onclick="history.go(-1); return false;">Cancelar</a>
                         </div>
-
-                        <div class="form-group mt-1">
-                            @Html.LabelFor(asesorModel => asesorModel.descripcion, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.TextAreaFor(asesorModel => asesorModel.descripcion, new { @class = "form-control", @rows = "3", @maxlength = "256" })
-                            @Html.ValidationMessageFor(asesorModel => asesorModel.descripcion, "", new { @class = "text-danger" })
-
-                        </div>
-                        <div class="row justify-content-center m-4">
-                            <div class="col-auto">
-                                <a href="#" class="btn btn-secondary btn-block" onclick="history.go(-1); return false;">Cancelar</a>
-                            </div>
-                            <div class="col-auto">
-                                <input type="submit" class="btn btn-primary btn-block" value="Guardar" />
-                            </div>
+                        <div class="col-auto">
+                            <input type="submit" class="btn btn-primary btn-block" value="Guardar" />
                         </div>
                     </div>
                 </div>
@@ -131,3 +140,97 @@ else
 {
     await Html.RenderPartialAsync("~/Views/Usuario/IniciarSesion.cshtml");
 }
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+
+        // Handle change event of area dropdown
+        $('#areaDropdown').click(function () {
+            var areaName = $(this).val();
+
+            // Clear departamento and unidadAcademica dropdowns
+            $('#departamentoDropdown').empty().append('<option value="">Seleccione un departamento...</option>');
+            $('#seccionDropdown').empty().append('<option value="">Selecciona una unidad académica...</option>');
+
+            if (areaName !== '') {
+                // Make AJAX request to fetch departamentos for selected area
+                $.ajax({
+                    url: '/Participante/GetDepartamentosByArea',
+                    type: 'GET',
+                    data: { areaName: areaName },
+                    dataType: 'json',
+                    success: function (data) {
+                        // Update departamento dropdown with fetched data
+                        $.each(data, function (index, value) {
+                            $('#departamentoDropdown').append('<option value="' + value + '">' + value + '</option>');
+                        });
+                    },
+                    error: function (xhr, status, error) {
+                        // Handle error
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Error',
+                            text: 'An error occurred while fetching departamentos: ' + error
+                        });
+                    }
+                });
+                // Make AJAX request to fetch secciones for selected departamento
+                $.ajax({
+                    url: '/Participante/GetSeccionesByDepartamento',
+                    type: 'GET',
+                    data: { departamentoName: departamentoName },
+                    dataType: 'json',
+                    success: function (data) {
+                        // Update unidadAcademica dropdown with fetched data
+                        $.each(data, function (index, value) {
+                            $('#seccionDropdown').append('<option value="' + value + '">' + value + '</option>');
+                        });
+                    },
+                    error: function (xhr, status, error) {
+                        // Handle error
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Error',
+                            text: 'An error occurred while fetching secciones: ' + error
+                        });
+                    }
+                });
+            }
+        });
+
+        // Handle change event of departamento dropdown
+        $('#departamentoDropdown').change(function () {
+            var departamentoName = $(this).val();
+            var areaName = $('#areaDropdown').val();
+
+            // Clear unidadAcademica dropdown
+            $('#seccionDropdown').empty().append('<option value="">Selecciona una unidad académica...</option>');
+
+            if (departamentoName !== '') {
+                // Make AJAX request to fetch secciones for selected departamento
+                $.ajax({
+                    url: '/Participante/GetSeccionesByDepartamento',
+                    type: 'GET',
+                    data: { areaName: areaName, departamentoName: departamentoName },
+                    dataType: 'json',
+                    success: function (data) {
+                        // Update unidadAcademica dropdown with fetched data
+                        $.each(data, function (index, value) {
+                            $('#seccionDropdown').append('<option value="' + value + '">' + value + '</option>');
+                        });
+                    },
+                    error: function (xhr, status, error) {
+                        // Handle error
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Error',
+                            text: 'An error occurred while fetching secciones: ' + error
+                        });
+                    }
+                });
+            }
+        });
+    });
+</script>
