--- a/webMetics/Views/Asesor/ListaAsesores.cshtml
+++ b/webMetics/Views/Asesor/ListaAsesores.cshtml
@@ -26,14 +26,6 @@
         <h1>@ViewBag.Title</h1>
         <hr />
 
-        @if (TempData["Message"] != null)
-        {
-            <div class="alert alert-dark alert-dismissible fade show" role="alert">
-                @TempData["Message"]
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-        }
-
         @if (ViewBag.ErrorMessage != null)
         {
             <div class="alert alert-dark alert-dismissible fade show mb-4" role="alert">
@@ -49,16 +41,13 @@
             </div>
         }
 
-        <div class="d-flex justify-content-end">
-            <div class="mx-1">
-                @using (Html.BeginForm("CrearAsesor", "Asesor", FormMethod.Post))
-                {
-                    @Html.AntiForgeryToken()
-                    <button type="submit" class="btn btn-primary">
-                        <i class="bi bi-person-plus me-1"></i>
-                        Agregar
-                    </button>
-                }
+        <div class="d-flex justify-content-between mb-4">
+            <div></div>
+
+            <div class="d-flex justify-content-end">
+                <div class="mx-1">
+                    @Html.ActionLink("   Agregar", "CrearAsesor", "Asesor", new { }, new { @class = "btn btn-primary bi bi-person-plus" })
+                </div>
             </div>
         </div>
 
@@ -69,16 +58,17 @@
             }
             else
             {
-                <table class="table table-striped">
+                <table class="table table-striped" id="tblCustomers">
                     <thead>
                         <tr>
                             <th scope="col">Nombre</th>
+                            <th scope="col">Primer<br>Apellido</th>
+                            <th scope="col">Segundo<br>Apellido</th>
                             <th scope="col">Correo institucional</th>
                             <th scope="col">Descripción</th>
-                            <th scope="col">Teléfonos</th>
-                            <th scope="col" style="width:5%;"></th>
-                            <th scope="col" style="width:5%;"></th>
-
+                            <th scope="col" style="width:10%;">Teléfono</th>
+                            <th class="text-center" scope="col" style="width:3.33%;"></th>
+                            <th class="text-center" scope="col" style="width:3.33%;"></th>
                         </tr>
                     </thead>
 
@@ -93,19 +83,20 @@
                             }
 
                             <tr>
-                                <td>@nombreCompleto</td>
-                                <td>@asesor.idAsesor</td>
+                                <td>@asesor.nombre</td>
+                                <td>@asesor.primerApellido</td>
+                                <td>@asesor.segundoApellido</td>
+                                <td>@asesor.correo</td>
                                 <td>@asesor.descripcion</td>
                                 <td>@asesor.telefono</td>
                                 <td>
-                                    @Html.ActionLink(" ", "EditarAsesor", "Asesor", new { idAsesor = asesor.idAsesor }, new { @class = "btn btn-outline-secondary bi bi-pencil-square" })
+                                    @Html.ActionLink(" ", "EditarAsesor", "Asesor", new { idAsesor = asesor.idAsesor }, new { @class = "text-secondary bi bi-pencil-square" })
                                 </td>
                                 <td>
-                                    <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModal('@asesor.idAsesor')">
+                                    <a href="#" class="text-danger" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModalEliminar('@asesor.idAsesor')">
                                         <i class="bi bi-trash"></i>
-                                    </button>
+                                    </a>
                                 </td>
-
                             </tr>
                         }
                     </tbody>
@@ -128,7 +119,7 @@
                     {
                         <div class="modal-footer">
                             <input type="hidden" id="idAsesor" name="idAsesor">
-                            <input type="submit" class="btn btn-primary" value="Aceptar" onclick="" />
+                            <input type="submit" class="btn btn-danger" value="Aceptar" onclick="" />
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                         </div>
                     }
